[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Menus/Menu_Ajuda/Ajuda.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fontes/pixel/Fipps-Regular.otf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fontes/titulo/Just One.ttf"

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/fontes/titulo/Just One.ttf"

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = SubResource( 5 )

[node name="Ajuda" type="Node"]
script = ExtResource( 1 )

[node name="Control_Ajuda" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelFundo" type="Panel" parent="Control_Ajuda"]
modulate = Color( 0.121569, 0.447059, 0.956863, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelMenuAjuda" type="Label" parent="Control_Ajuda"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_right = 77.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Menu Ajuda"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSobre" type="Button" parent="Control_Ajuda"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -18.0
margin_right = 45.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sobre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonComoJogar" type="Button" parent="Control_Ajuda"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = 16.5
margin_right = 44.5
margin_bottom = 47.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Como Jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVoltar" type="Button" parent="Control_Ajuda"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -35.0
margin_right = 54.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 6 )
text = "Voltar"
[connection signal="button_down" from="Control_Ajuda/ButtonSobre" to="." method="_on_ButtonSobre_button_down"]
[connection signal="button_down" from="Control_Ajuda/ButtonComoJogar" to="." method="_on_ButtonComoJogar_button_down"]
[connection signal="button_down" from="Control_Ajuda/ButtonVoltar" to="." method="_on_ButtonVoltar_button_down"]
